# jetshift-mcp-server

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/: config.py  database.py  tools.py
fast-agent/: agent.py  fastagent.config.yaml  fastagent.secrets.example.yaml
